--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,327 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+header{
+  margin-bottom: 5rem;
+}
+
+.InputSearch{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  align-content: center;
+  padding-top: 4rem;
+}
+
+.InputSearch div{
+  padding: 1rem;
+  height: 4rem;
+  width: 22rem;
+  display: flex;
+  justify-content: center;
+  border: solid 0.1rem rgb(85, 85, 85);
+ 
+  box-shadow: 0.5rem 0.5rem 0rem rgb(231, 231, 231);
+  outline: none;
+}
+
+.InputSearch div input{
+  border: none;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  outline: none;
+  font-size: 1rem;
+}
+
+.InputSearch div img{
+  height: 2rem;
+  cursor: pointer;
+}
+
+.pokedex{
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+
+.boton{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+
+.boton button{
+  font-size: 1.5rem;
+  padding: 1rem 3rem;
+  border: none;
+  outline: none;
+  background-color: #006d77;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  color: white;
+  transition: all 0.3s;
+}
+
+.boton button:hover{
+  background-color: #008b98;
+}
+
+.card{
+  box-shadow: 0 1rem 1rem rgb(210, 210, 210);
+  border-radius: 1rem;
+  width: 26rem;
+  overflow: hidden;
+  transition: all 0.3s;
+}
+
+
+.card .img{
+  background-color: rgb(245, 245, 245);
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ height: 15rem;
+ transition: all 0.3s;
+}
+
+.card:hover .img{
+  background-color: rgb(232, 232, 232);
+}
+
+.card .img img{
+  height: 17rem;
+  padding-bottom: 3rem;
+}
+
+.card .target{
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+}
+
+.card .target h3{
+  text-decoration: underline white;
+  color: black;
+  font-size: 1.5rem;
+}
+
+.card .target span{
+  text-decoration: underline white;
+  color: black;
+  font-size: 1.3rem;
+}
+
+.PokemonPage{
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.PokemonPage .info{
+  display: flex;
+  justify-content: space-between;
+  gap: 4rem;
+}
+
+.PokemonPage .info .info2{
+  width: 50rem;
+}
+
+.PokemonPage .info .info2 h1{
+  font-size: 5rem;
+}
+
+.PokemonPage Link{
+  border: 0.1rem solid black;
+}
+
+:root {
+	--color-fire: #ff7402;
+	--color-grass: #9bcc50;
+	--color-steel: #9eb7b8;
+	--color-water: #4592c4;
+	--color-psychic: #f366b9;
+	--color-ground: #ab9842;
+	--color-ice: #51c4e7;
+	--color-flying: #3dc7ef;
+	--color-ghost: #4d5b64;
+	--color-normal: #a4acaf;
+	--color-poison: #7e0058;
+	--color-rock: #a38c21;
+	--color-fighting: #d56723;
+	--color-dark: #707070;
+	--color-bug: #729f3f;
+	--color-dragon: linear-gradient(180deg, #53a4cf 50%, #f16e57 50%);
+	--color-electric: #bba909;
+	--color-fairy: #fdb9e9;
+	--color-shadow: #7b62a3;
+	--color-unknow: #757575;
+
+	--color-primary: #006d77;
+	--color-primary-hover: #83c5be;
+}
+
+.fire{
+  background-color: #ff7402;
+  padding: 0.5rem 1rem;
+  color: white;
+  border-radius: 0.5rem;
+}
+
+.grass{
+  background-color: #9bcc50;
+  padding: 0.5rem 1rem;
+  color: white;
+  border-radius: 0.5rem;
+}
+
+.water{
+  background-color: #4592c4;
+  padding: 0.5rem 1rem;
+  color: white;
+  border-radius: 0.5rem;
+}
+
+.normal{
+  background-color: #a4acaf;
+  padding: 0.5rem 1rem;
+  color: white;
+  border-radius: 0.5rem;
+}
+
+.poison{
+  background-color: #7e0058;
+  padding: 0.5rem 1rem;
+  color: white;
+  border-radius: 0.5rem;
+}
+
+.bug{
+  background-color: #729f3f;
+  padding: 0.5rem 1rem;
+  color: white;
+  border-radius: 0.5rem;
+}
+
+.flying{
+  background-color: #3dc7ef;
+  padding: 0.5rem 1rem;
+  color: white;
+  border-radius: 0.5rem;
+}
+
+.steel{
+  background-color: #9eb7b8;
+  padding: 0.5rem 1rem;
+  color: white;
+  border-radius: 0.5rem;
+}
+
+.psychic{
+  background-color: #f366b9;
+  padding: 0.5rem 1rem;
+  color: white;
+  border-radius: 0.5rem;
+}
+
+.ground{
+  background-color: #ab9842;
+  padding: 0.5rem 1rem;
+  color: white;
+  border-radius: 0.5rem;
+}
+
+.ice{
+  background-color: #51c4e7;
+  padding: 0.5rem 1rem;
+  color: white;
+  border-radius: 0.5rem;
+}
+
+.ghost{
+  background-color: #4d5b64;
+  padding: 0.5rem 1rem;
+  color: white;
+  border-radius: 0.5rem;
+}
+
+.rock{
+  background-color: #a38c21;
+  padding: 0.5rem 1rem;
+  color: white;
+  border-radius: 0.5rem;
+}
+
+.fighting{
+  background-color: #d56723;
+  padding: 0.5rem 1rem;
+  color: white;
+  border-radius: 0.5rem;
+}
+
+.electric{
+  background-color: #eadd4f;
+  padding: 0.5rem 1rem;
+  color: white;
+  border-radius: 0.5rem;
+}
+
+.dragon{
+  background-color: linear-gradient(180deg, #53a4cf 50%, #f16e57 50%);
+  padding: 0.5rem 1rem;
+  color: white;
+  border-radius: 0.5rem;
+}
+
+.fairy{
+  background-color: #fdb9e9;
+  padding: 0.5rem 1rem;
+  color: white;
+  border-radius: 0.5rem;
+}
+
+.dark{
+  background-color: #363636;
+  padding: 0.5rem 1rem;
+  color: white;
+  border-radius: 0.5rem;
+}
+
+.shadow{
+  background-color: #7b62a3;
+  padding: 0.5rem 1rem;
+  color: white;
+  border-radius: 0.5rem;
+}
+
+.loader{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loader img{
+  height: 4rem;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
